# daikin-notifier

./: README.md  pyproject.toml
daikin_notifier/: __main__.py  api.py  cli.py  history.py  line.py
