[tool.poetry]
name = "daikin-notifier"
version = "0.1.0"
description = ""
authors = ["danpeeei <kuro.dogbear@gmail.com>"]

[tool.poetry.scripts]
daikin-notifier = "daikin_notifier"

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
